--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -16,4 +16,13 @@
 	border-radius: 25px;
 	border: 1px;
 }
+.backButton {
+	background-color: #002c76;
+	width: 30%;
+	padding: 0.5em;
+	color: white;
+	border-radius: 25px;
+	border: 1px;
+	margin: 1em;
+}
 
